--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 	branch = v4.8.1
+[submodule "lib/merkle-distributor"]
+	path = lib/merkle-distributor
+	url = https://github.com/Uniswap/merkle-distributor
+	branch = v1.0.1
