--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "repository": "git@github.com:0xnavigator/exit10-protocol.git",
   "author": "0xnavigator <0xnavigator.proton.me>",
   "license": "MIT",
+  "scripts": {
+    "deploy:local": "./test-local.sh",
+    "start": "./start.sh",
+    "test1": "forge test -vvv --match-contract "
+  },
   "devDependencies": {
     "prettier": "^2.8.4",
     "prettier-plugin-solidity": "^1.1.2",
