--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EXIT10",
+  "name": "exit10",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:0xnavigator/exit10-protocol.git",
