--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,4 @@ REWARDS_DURATION=1209600
 REWARDS_DURATION_EXIT=63072000
 # ProtocolGuild Mainnet
 BENEFICIARY=0xF29Ff96aaEa6C9A1fBa851f74737f3c069d4f1a9
+TRANSFER_LOCKOUT_PERIOD_SECONDS=60
