two token order support

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ PRIVATE_KEY=
 
 #Exit10 Pool Params
 FEE=500
+# ETH PRICE
+# LOWER_TICK=-214170
+# UPPER_TICK=-184210
+
+#USDC PRICE
 LOWER_TICK=184210
 UPPER_TICK=214170
 
