--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,5 @@ REWARDS_DURATION_EXIT=126144000
 # ProtocolGuild Mainnet
 BENEFICIARY=0xF29Ff96aaEa6C9A1fBa851f74737f3c069d4f1a9
 TRANSFER_LOCKOUT_PERIOD_SECONDS=60
+# Lido Mainnet
+LIDO=0xae7ab96520DE3A18E5e111B5EaAb095312D7fE84
