Changed naming of PERIOD to DURATION

--- a/config/mainnet/deployment.ini
+++ b/config/mainnet/deployment.ini
@@ -14,7 +14,7 @@ LIQUIDITY_PER_USDC=12875978289
 # 4 Days
 ACCRUAL_PARAMETER=345600
 # 1 Week
-BOOTSTRAP_PERIOD=604800
+BOOTSTRAP_DURATION=604800
 # 2 Weeks
 REWARDS_DURATION=1209600
 # 4 Years
