--- a/config/local-flip/deployment.ini
+++ b/config/local-flip/deployment.ini
@@ -32,3 +32,6 @@ TRANSFER_LOCKOUT_PERIOD_SECONDS=60
 RPC_URL="http://localhost:8546"
 ETHERSCAN="https://api.etherscan.io/api"
 GRAPH_NETWORK=goerli
+
+# local dev-data only
+PHASE=bootstrap
