--- a/config/mainnet/deployment.ini
+++ b/config/mainnet/deployment.ini
@@ -12,6 +12,8 @@ BOOTSTRAP_LIQUIDITY_CAP=50000000000000000
 LIQUIDITY_PER_USDC=12875978289
 # 4 Days
 ACCRUAL_PARAMETER=345600
+# Tue Jun 27 2023 12:00:00 GMT+0000
+BOOTSTRAP_START=1687867200
 # 1 Week
 BOOTSTRAP_DURATION=604800
 # 2 Weeks
