deploy scripts update, ability to deploy a specific phase scenario

--- a/config/local/deployment.ini
+++ b/config/local/deployment.ini
@@ -16,8 +16,6 @@ PERCENTAGE_FLOOR_TARGET=5000
 
 BOOTSTRAP_LIQUIDITY_CAP=50000000000000000
 
-#Liquidity per 1_000000 USDC
-LIQUIDITY_PER_USDC=12875978289
 # 4 Days
 ACCRUAL_PARAMETER=345600
 BOOTSTRAP_START=0
@@ -36,4 +34,7 @@ ETHERSCAN="https://api.etherscan.io/api"
 GRAPH_NETWORK=mainnet
 
 # local dev-data only
-PHASE=bond
+# PHASE=prelaunch
+PHASE=bootstrap
+# PHASE=bond
+# PHASE=exit
