Final deply setup

--- a/config/local/deployment.ini
+++ b/config/local/deployment.ini
@@ -6,16 +6,8 @@ LOWER_TICK=184210
 UPPER_TICK=214170
 FEE=500
 
-# infrastructure
-INIT_SQRT_PRICE="1980704062856608439838598758400000"
-MINT_TOKEN0="99000000000000"
-MINT_TOKEN1="40740000000000000000000"
-
 # exit10
-PERCENTAGE_FLOOR_TARGET=5000
-
 BOOTSTRAP_LIQUIDITY_CAP=50000000000000000
-
 # 4 Days
 ACCRUAL_PARAMETER=345600
 BOOTSTRAP_START=0
@@ -29,9 +21,20 @@ REWARDS_DURATION_EXIT=126144000
 BENEFICIARY=0xF29Ff96aaEa6C9A1fBa851f74737f3c069d4f1a9
 TRANSFER_LOCKOUT_PERIOD_SECONDS=60
 
-RPC_URL="http://localhost:8545"
-ETHERSCAN="https://api.etherscan.io/api"
+# Deployment setup
+LOCAL_DEPLOYMENT=1
+VERIFY_DEPLOYMENT=0
+ETH_RPC_URL="http://localhost:8545"
+ETHERSCAN=
 GRAPH_NETWORK=mainnet
+
+
+# LOCAL ONLY
+ETH_FROM=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
+# infrastructure
+INIT_SQRT_PRICE="1980704062856608439838598758400000"
+MINT_TOKEN0="99000000000000"
+MINT_TOKEN1="40740000000000000000000"
 
 # local dev-data only
 # PHASE=prelaunch
