--- a/config/local/deployment.ini
+++ b/config/local/deployment.ini
@@ -13,10 +13,10 @@ ACCRUAL_PARAMETER=345600
 BOOTSTRAP_START=0
 # 1 Week
 BOOTSTRAP_DURATION=604800
-# 2 Weeks
-REWARDS_DURATION=1209600
-# 4 Years
-REWARDS_DURATION_EXIT=126144000
+# 1 Week
+REWARDS_DURATION=604800
+# 1 Week
+REWARDS_DURATION_EXIT=604800
 # ProtocolGuild Mainnet
 BENEFICIARY=0xF29Ff96aaEa6C9A1fBa851f74737f3c069d4f1a9
 TRANSFER_LOCKOUT_PERIOD_SECONDS=60
